--- a/index.html
+++ b/index.html
@@ -6,13 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cours JS sur les données</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./Assets/style/index.css">
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li>Sass</li>
+            <li>Css</li>
+            <li>Html</li>
+        </ul>
+    </nav>
+    <h1>Cours Sass</h1>
 
-
-
+    <section>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, aliquam doloribus ullam tempore
+            doloremque excepturi provident aliquid iure facilis hic!</p>
+    </section>
 
     <script src="index.js"></script>
 </body>
